--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,16 +1,10 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
+
 
 .logo {
   padding: 5px;
@@ -40,4 +34,40 @@ li a {
 
 li a:hover {
   color: green !important; 
+}
+
+
+.main1 {
+
+  background-color: #F3C17B;; 
+  padding: 20px; 
+  font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
+
+.main1 h1 {
+  font-size: 2em; 
+  color: #000000; 
+}
+
+.main1 p {
+  font-size: 1em; 
+  line-height: 1.6; 
+  color: #000000; 
+}
+
+.readmore1 {
+  background-color: #21a57f !important;
+  color:black;
+  border-style:double;
+  border-color: black;
+  padding: 13px 32px;
+  text-align: center;
+  font-weight: bolder;
+  display: inline-block;
+  font-size: 13px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  box-shadow: 3px 3px white;
 }
