--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,11 +46,9 @@ li a:hover {
   
 }
 
-.solar {
-  width: 35%;  
-  height: auto; 
-  max-height: 100%;
-  max-width: 100%;
+.sidepic {
+  width: 20%;  
+  height: 40%; 
   border: 2px solid black;
 }
 
@@ -62,7 +60,7 @@ li a:hover {
 }
 
 .main1 p {
-  font-size: 1em;
+  font-size: 1.3em;
   line-height: 1.6;
   color: #000000;
 }
@@ -85,8 +83,8 @@ li a:hover {
   position: fixed;
   top: 70px;
   right: 0;
-  width: 25vw;
-  height: 45%;
+  width: 30vw;
+  height: 57%;
   background-color: #D8F1A0;
   padding: 20px;
   box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.3);
@@ -132,3 +130,83 @@ li a:hover {
   box-shadow: 3px 3px white;
 
 }
+
+.getdata {
+  background-color: #21a57f !important;
+  color: black;
+  border-style: double;
+  border-color: black;
+  padding: 10px 32px;
+  text-align: center;
+  font-weight: bolder;
+  display: inline-block;
+  font-size: 13px;
+  margin: 4px 2px;
+  box-shadow: 3px 3px white;
+}
+
+.btn:hover {
+  color:black;
+}
+
+.main2 {
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #FE9C8A;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  width: 75vw;
+  float: left;
+}
+
+.main2 h1 {
+  font-size: 2em;
+  color: #000000;
+  text-align: center;
+}
+
+.main2 p {
+  font-size: 1.3em;
+  line-height: 1.6;
+  color: #000000;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  font-size: 0.6em;
+}
+
+.collapsible {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  padding: 18px;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  box-shadow: 3px 3px rgb(0, 0, 0);
+}
+
+.active, .collapsible:hover {
+  background-color: #F3C17B;
+}
+
+
+.main3 {
+  background-color: #D8F1A0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  width: 75vw;
+  float: left;
+
+}
+
