--- a/client/public/consultation.css
+++ b/client/public/consultation.css
@@ -1,8 +1,6 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-<<<<<<< HEAD
     background-color: #FE9C8A;
-=======
 
 
   }
@@ -40,4 +38,31 @@ body {
   li a:hover {
     color: green !important;
   }
+  
+  
+  .container {
+    width: 50%;
+    margin: 50px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+input, button {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+button {
+    background: #D8F1A0;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+canvas {
+    margin-top: 20px;
+}
   
