--- a/client/public/dashboardlanding.css
+++ b/client/public/dashboardlanding.css
@@ -42,6 +42,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.container-fluid1 {
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  flex-grow: 1;
+}
 input, button {
     width: 100%;
     padding: 10px;
@@ -65,16 +72,15 @@ li {
 
 .row.content {
     height: 550px;
+    
 }
 
 .sidenav {
-    background-color: #fe9c8a !important;
-    height: 100%;
-    padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-
-    
+  width: 250px;
+  background-color: #fe9c8a !important;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .activeprofile a {
@@ -83,3 +89,11 @@ li {
 }
 
 
+.profile-layout {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 50px auto;
+  max-width: 1200px;
+}
